--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.3",
     "react-tooltip": "^5.28.0"
   },
   "scripts": {
