--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,50 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
+/yarn.lock
+/package-lock.json
+/pnpm-lock.yaml
 
-# testing
+# Build Outputs
+/build
+/dist
+
+# Testing
 /coverage
 
-# production
-/build
+# Vercel
+/.vercel
+.vercelignore
 
-# misc
-.DS_Store
+# Environment Variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.example  # Optional: Remove this if you want to include a sample .env file
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+
+# IDE/Editor Files
+.DS_Store
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Misc
+*.log
+*.tmp
+*.bak
+*.swp
